vendor/structopt-0.3.21/tests/ui/subcommand_opt_vec.stderr
error: Option<Vec<T>> type is not allowed for subcommand
  --> $DIR/subcommand_opt_vec.rs:18:10
   |
18 |     cmd: Option<Vec<Command>>,
   |          ^^^^^^^^^^^^^^^^^^^^
